# Iron-Jarvis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.dashboard  LICENSE  PLAN.md  PRODUCTION-AUDIT.md  README.md  SPEC-SECTIONS-01-09.md  SPEC.MD  TASKS.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
.claude/: session-start.sh  settings.json
.do/: app.yaml
.github/workflows/: release.yml  tests.yml
.scratch-ltm-notes/: hello.md
dashboard/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
dashboard/__tests__/: api.test.ts  session-shape.test.ts  setup.ts  ui.test.tsx
dashboard/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
dashboard/components/: BrandGlyph.tsx  CommandPalette.tsx  EventStream.tsx  FilePickerModal.tsx  FirstRunWizard.tsx  MainContent.tsx  ModelSwitcher.tsx  NewSessionForm.tsx  NotificationBell.tsx  OnboardingWelcome.tsx  PageHeader.tsx  ProjectSwitcher.tsx  ProviderDowngradeBanner.tsx  ReviewPanel.tsx  SessionFeedback.tsx  Sidebar.tsx  SimulatedBanner.tsx  ThemeSwitcher.tsx  TimeTravelFeed.tsx  TracesPanel.tsx  VoiceInput.tsx  motion.tsx  ui.tsx
dashboard/lib/: api.ts  fleet.ts  format.ts  kanban.ts  types.ts  useApi.ts  useChatStream.ts  useDesktopNotifications.ts  useDictation.ts  useEvents.ts  useReviews.ts  useRunStream.ts  useSpeechRecognition.ts  useTTS.ts
deploy/: README.md  aws.md  azure.md
desktop/: afterPack.js  build-installer.ps1  main.js  package.json  preload.js  sign.js  spotlight-preload.js  spotlight.html
docs/: COMPLETENESS-AUDIT.md  COMPUTER-USE.md  FEATURES-PLAN.md  PLAN.md  README.md  REFLEX.md  SIGNING.md  TOKEN-POLICY.md
packaging/: ironjarvis.spec
scripts/: load_env_to_vault.py
tests/: conftest.py  test_agent_loop.py  test_agent_threads.py  test_ai_clis.py  test_arbitrage_livedocs_mining.py  test_artifacts.py  test_audit_timeline.py  test_auth.py  test_auto_routing.py  test_backup_excludes_media.py  test_billing_ledger.py  test_channels_integrations_add.py  test_chat_auto_tools.py  test_chat_creation_honesty.py  test_chat_direct.py  test_chat_remember_connectors.py  test_chat_repetitive.py  test_chat_share.py  test_chat_threads_discovery.py  test_chatgpt_backend.py  test_cli_detect.py  test_codex_cli_reply_channel.py  test_comm.py  test_comm_inbound.py  test_computeruse.py  test_computeruse_vision.py  test_concurrency_fixes.py  test_config.py  test_connect_wave.py  test_connectors.py  test_context_spine.py  test_creative.py  test_creative_fixes.py  test_creative_studio.py  test_custom_endpoints_multi.py  test_custom_providers.py  test_cx05_api.py  test_cx05_calendar.py  test_cx05_email.py  test_cx05_hardening.py  (+125 more)
(+334 files in other folders)
