[project]
name = "iron-jarvis"
version = "0.1.0"
description = "Iron Jarvis — a local-first AI operating system (Phases 0–3 vertical slice)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlmodel>=0.0.21",
    "typer>=0.12",
    "httpx>=0.27",
    "anthropic>=0.40",
    "tomli-w>=1.0",
    "cryptography>=43",
    "rich>=13",
    "psutil>=7.2.2",
    "numpy>=2.5.0",
    "apscheduler>=3.11.2",
    "pyyaml>=6.0.3",
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ironjarvis = "iron_jarvis.daemon.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iron_jarvis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
